# sv_restaurant_scraper

./: .gitignore  Cargo.toml
src/: fetch.rs  lib.rs  main.rs  notes.txt  parser.rs
src/structs/: meal.rs  menu.rs  mod.rs  restaurant.rs  restaurant_search_result.rs  scrape_error.rs  sv_error.rs
