[package]
name = "sv_menu_scraper"
version = "0.2.1"
edition = "2021"
license = "GPL-2.0"
description = "This library allows you to scrape sv_restaurant menu websites such as \"https://bkw-bern.sv-restaurant.ch/de/menuplan/\""
repository = "https://github.com/NiciTheNici/sv_restaurant_scraper"
homepage = "https://nici.red"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
scraper = { version = "0.17.1"}
colored = { version = "2.0.4" }
chrono = "0.4.26"
url = "2.4.1"
Inflector = "0.11.4"
