[package]
name = "sv_menu_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
scraper = { version = "0.17.1"}
colored = { version = "2.0.4" }
chrono = "0.4.26"
url = "2.4.1"
Inflector = "0.11.4"
unescaper = "0.1.2"
serde_json = "1.0.105"
serde = {version = "1.0.188", features = ["derive"]}
